# saf-eval

./: README.md  pyproject.toml
.github/workflows/: test.yml
examples/: basic_usage.py  custom_evaluation.py  custom_retriever.py
saf_eval/: config.py
saf_eval/containment/: checker.py
saf_eval/core/: pipeline.py
saf_eval/evaluation/: classifier.py  scoring.py
saf_eval/extraction/: extractor.py
saf_eval/llm/: base.py
saf_eval/llm/providers/: openai.py
saf_eval/retrieval/: base.py
saf_eval/retrieval/providers/: simple.py
saf_eval/utils/: __init__.py  deduplication.py
tests/: test_extraction.py  test_integration.py  test_retrieval.py
